@@ -1,3 +1,12 @@
+2008-08-05  Martyn Russell  <martyn@imendio.com>
+
+	* src/tracker-indexer/modules/evolution.c: Use g_try_malloc0
+	instead of just g_malloc0 so we don't try to allocate rediculous
+	lengths of memory and abort. Also, if we can't parse the file, we
+	now return NULL metadata and continue as usual.
+	
+	* src/tracker-indexer/tracker-indexer.c: Improved messaging.
+
 2008-08-04  Ivan Frade  <ivan.frade@nokia.com>
 
 	* src/tracker-indexer/tracker-indexer.c: Using GError in the
